[package]
name = "jinx"
authors = ["Rob Wagner <rob@sombia.com"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI tool for quickly populating new local repositories with various files."
repository = "https://github.com/robertwayne/jinx"

[dependencies]
pico-args = "0.4"
anyhow = "1"
chrono = "0.4"
iridescent = "0.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"
