[package]
name = "jinx"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI tool for populating fresh repositories with standard files, such as a README, licenses, and language-specific settings files."
repository = "https://github.com/robertwayne/jinx"

[dependencies]
pico-args = "0.5"
anyhow = "1"
chrono = "0.4"
iridescent = "0.2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"
